RAIN-1782:: Application Number alignment is not proper - fixed . Alignment changed to center.

--- a/web/rainmaker/dev-packages/egov-billamend-dev/src/ui-config/screens/specs/bill-amend/acknowledgementResource/index.scss
+++ b/web/rainmaker/dev-packages/egov-billamend-dev/src/ui-config/screens/specs/bill-amend/acknowledgementResource/index.scss
@@ -1,3 +1,9 @@
+.ack-tail{
+    text-align: right;
+    justify-content: center;
+    flex: 1
+}
+
 @media only screen and (max-width: 768px) {
     .home-footer {
      min-width: 360px !important;
